// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Login /> interactions phone_number field should be present if mobile phone verification is on 1`] = `
<Fragment>
  <div
    className="container content"
    id="login"
  >
    <div
      className="inner"
    >
      <form
        className="main-column"
        onSubmit={[Function]}
      >
        <div
          className="inner"
        >
          <div
            className="social-links row"
          >
            <p
              key="#facebook"
            >
              <a
                className="social-link button full"
                href="#facebook"
                rel="noopener noreferrer"
              >
                <span
                  className="inner"
                >
                  <img
                    alt="Login with Facebook"
                    className="icon"
                    src="/assets/default/facebook.svg"
                  />
                  <span
                    className="text"
                  >
                    Login with Facebook
                  </span>
                </span>
              </a>
            </p>
            <p
              key="#google"
            >
              <a
                className="social-link button full"
                href="#google"
                rel="noopener noreferrer"
              >
                <span
                  className="inner"
                >
                  <img
                    alt="Login with Google"
                    className="icon"
                    src="/assets/default/google.svg"
                  />
                  <span
                    className="text"
                  >
                    Login with Google
                  </span>
                </span>
              </a>
            </p>
            <p
              key="#twitter"
            >
              <a
                className="social-link button full"
                href="#twitter"
                rel="noopener noreferrer"
              >
                <span
                  className="inner"
                >
                  <img
                    alt="Login with X"
                    className="icon"
                    src="/assets/default/twitter.svg"
                  />
                  <span
                    className="text"
                  >
                    Login with X
                  </span>
                </span>
              </a>
            </p>
          </div>
          <div
            className="fieldset"
          >
            <div
              className="row phone-number"
            >
              <label
                htmlFor="phone-number"
              >
                PHONE_LBL
              </label>
              <Suspense
                fallback={
                  <input
                    className="form-control input"
                    id="username"
                    name="username"
                    onChange={[Function]}
                    placeholder="PHONE_PHOLD"
                    type="tel"
                    value=""
                  />
                }
              >
                <lazy
                  enableSearch={false}
                  excludeCountries={Array []}
                  inputProps={
                    Object {
                      "autoComplete": "tel",
                      "className": "form-control input ",
                      "id": "username",
                      "name": "username",
                      "required": true,
                    }
                  }
                  name="username"
                  onChange={[Function]}
                  onlyCountries={Array []}
                  placeholder="PHONE_PHOLD"
                  preferredCountries={Array []}
                  value=""
                />
              </Suspense>
            </div>
            <div
              className="row password"
            >
              <label
                htmlFor="password"
              >
                PWD_LBL
              </label>
              <input
                autoComplete="current-password"
                className="input "
                id="password"
                name="password"
                onChange={[Function]}
                pattern=".{6,}"
                placeholder="PWD_PHOLD"
                required={true}
                title="PWD_PTRN_DESC"
                type="password"
                value=""
              />
              <PasswordToggleIcon
                hidePassword={true}
                inputRef={
                  Object {
                    "current": null,
                  }
                }
                isVisible={false}
                parentClassName=""
                secondInputRef={Object {}}
                toggler={[Function]}
              />
            </div>
            <div
              className="row remember-me"
            >
              <input
                checked={true}
                id="remember_me"
                name="remember_me"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="remember_me"
              >
                REMEMBER_ME
              </label>
            </div>
          </div>
          <div
            className="row add-info"
          >
            LOGIN_ADD_INFO_TXT
          </div>
          <div
            className="row login"
          >
            <input
              className="button full"
              type="submit"
              value="LOGIN"
            />
          </div>
          <div
            className="row register"
          >
            <p>
              REGISTER_BTN_LBL
            </p>
            <Link
              className="button full"
              to="/default/registration"
            >
              REGISTER_BTN_TXT
            </Link>
          </div>
          <div
            className="row links"
          >
            <Link
              className="link"
              to="/default/password/reset"
            >
              FORGOT_PASSWORD
            </Link>
          </div>
        </div>
      </form>
      <Connect(Contact) />
    </div>
  </div>
  <Routes>
    <Route
      element={
        <Memo(Connect(Component))
          prevPath="/default/login"
        />
      }
      path=":name"
    />
  </Routes>
</Fragment>
`;

exports[`<Login /> interactions should not show phone_number field if auto_switch_phone_input is false 1`] = `
<Fragment>
  <div
    className="container content"
    id="login"
  >
    <div
      className="inner"
    >
      <form
        className="main-column"
        onSubmit={[Function]}
      >
        <div
          className="inner"
        >
          <div
            className="social-links row"
          >
            <p
              key="#facebook"
            >
              <a
                className="social-link button full"
                href="#facebook"
                rel="noopener noreferrer"
              >
                <span
                  className="inner"
                >
                  <img
                    alt="Login with Facebook"
                    className="icon"
                    src="/assets/default/facebook.svg"
                  />
                  <span
                    className="text"
                  >
                    Login with Facebook
                  </span>
                </span>
              </a>
            </p>
            <p
              key="#google"
            >
              <a
                className="social-link button full"
                href="#google"
                rel="noopener noreferrer"
              >
                <span
                  className="inner"
                >
                  <img
                    alt="Login with Google"
                    className="icon"
                    src="/assets/default/google.svg"
                  />
                  <span
                    className="text"
                  >
                    Login with Google
                  </span>
                </span>
              </a>
            </p>
            <p
              key="#twitter"
            >
              <a
                className="social-link button full"
                href="#twitter"
                rel="noopener noreferrer"
              >
                <span
                  className="inner"
                >
                  <img
                    alt="Login with X"
                    className="icon"
                    src="/assets/default/twitter.svg"
                  />
                  <span
                    className="text"
                  >
                    Login with X
                  </span>
                </span>
              </a>
            </p>
          </div>
          <div
            className="fieldset"
          >
            <div
              className="row username"
            >
              <label
                htmlFor="username"
              >
                EMAIL
              </label>
              <input
                autoComplete="username"
                className="input "
                id="username"
                name="username"
                onChange={[Function]}
                pattern=".+@.+\\\\..+"
                placeholder="USERNAME_LOG_PHOLD"
                required={true}
                title="USERNAME_LOG_TITL"
                type="email"
                value=""
              />
            </div>
            <div
              className="row password"
            >
              <label
                htmlFor="password"
              >
                PWD_LBL
              </label>
              <input
                autoComplete="current-password"
                className="input "
                id="password"
                name="password"
                onChange={[Function]}
                pattern=".{6,}"
                placeholder="PWD_PHOLD"
                required={true}
                title="PWD_PTRN_DESC"
                type="password"
                value=""
              />
              <PasswordToggleIcon
                hidePassword={true}
                inputRef={
                  Object {
                    "current": null,
                  }
                }
                isVisible={false}
                parentClassName=""
                secondInputRef={Object {}}
                toggler={[Function]}
              />
            </div>
            <div
              className="row remember-me"
            >
              <input
                checked={true}
                id="remember_me"
                name="remember_me"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="remember_me"
              >
                REMEMBER_ME
              </label>
            </div>
          </div>
          <div
            className="row add-info"
          >
            LOGIN_ADD_INFO_TXT
          </div>
          <div
            className="row login"
          >
            <input
              className="button full"
              type="submit"
              value="LOGIN"
            />
          </div>
          <div
            className="row register"
          >
            <p>
              REGISTER_BTN_LBL
            </p>
            <Link
              className="button full"
              to="/default/registration"
            >
              REGISTER_BTN_TXT
            </Link>
          </div>
          <div
            className="row links"
          >
            <Link
              className="link"
              to="/default/password/reset"
            >
              FORGOT_PASSWORD
            </Link>
          </div>
        </div>
      </form>
      <Connect(Contact) />
    </div>
  </div>
  <Routes>
    <Route
      element={
        <Memo(Connect(Component))
          prevPath="/default/login"
        />
      }
      path=":name"
    />
  </Routes>
</Fragment>
`;

exports[`<Login /> interactions username should be text field if mobile phone verification is off 1`] = `
<Fragment>
  <div
    className="container content"
    id="login"
  >
    <div
      className="inner"
    >
      <form
        className="main-column"
        onSubmit={[Function]}
      >
        <div
          className="inner"
        >
          <div
            className="social-links row"
          >
            <p
              key="#facebook"
            >
              <a
                className="social-link button full"
                href="#facebook"
                rel="noopener noreferrer"
              >
                <span
                  className="inner"
                >
                  <img
                    alt="Login with Facebook"
                    className="icon"
                    src="/assets/default/facebook.svg"
                  />
                  <span
                    className="text"
                  >
                    Login with Facebook
                  </span>
                </span>
              </a>
            </p>
            <p
              key="#google"
            >
              <a
                className="social-link button full"
                href="#google"
                rel="noopener noreferrer"
              >
                <span
                  className="inner"
                >
                  <img
                    alt="Login with Google"
                    className="icon"
                    src="/assets/default/google.svg"
                  />
                  <span
                    className="text"
                  >
                    Login with Google
                  </span>
                </span>
              </a>
            </p>
            <p
              key="#twitter"
            >
              <a
                className="social-link button full"
                href="#twitter"
                rel="noopener noreferrer"
              >
                <span
                  className="inner"
                >
                  <img
                    alt="Login with X"
                    className="icon"
                    src="/assets/default/twitter.svg"
                  />
                  <span
                    className="text"
                  >
                    Login with X
                  </span>
                </span>
              </a>
            </p>
          </div>
          <div
            className="fieldset"
          >
            <div
              className="row username"
            >
              <label
                htmlFor="username"
              >
                EMAIL
              </label>
              <input
                autoComplete="username"
                className="input "
                id="username"
                name="username"
                onChange={[Function]}
                pattern=".+@.+\\\\..+"
                placeholder="USERNAME_LOG_PHOLD"
                required={true}
                title="USERNAME_LOG_TITL"
                type="email"
                value=""
              />
            </div>
            <div
              className="row password"
            >
              <label
                htmlFor="password"
              >
                PWD_LBL
              </label>
              <input
                autoComplete="current-password"
                className="input "
                id="password"
                name="password"
                onChange={[Function]}
                pattern=".{6,}"
                placeholder="PWD_PHOLD"
                required={true}
                title="PWD_PTRN_DESC"
                type="password"
                value=""
              />
              <PasswordToggleIcon
                hidePassword={true}
                inputRef={
                  Object {
                    "current": null,
                  }
                }
                isVisible={false}
                parentClassName=""
                secondInputRef={Object {}}
                toggler={[Function]}
              />
            </div>
            <div
              className="row remember-me"
            >
              <input
                checked={true}
                id="remember_me"
                name="remember_me"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="remember_me"
              >
                REMEMBER_ME
              </label>
            </div>
          </div>
          <div
            className="row add-info"
          >
            LOGIN_ADD_INFO_TXT
          </div>
          <div
            className="row login"
          >
            <input
              className="button full"
              type="submit"
              value="LOGIN"
            />
          </div>
          <div
            className="row register"
          >
            <p>
              REGISTER_BTN_LBL
            </p>
            <Link
              className="button full"
              to="/default/registration"
            >
              REGISTER_BTN_TXT
            </Link>
          </div>
          <div
            className="row links"
          >
            <Link
              className="link"
              to="/default/password/reset"
            >
              FORGOT_PASSWORD
            </Link>
          </div>
        </div>
      </form>
      <Connect(Contact) />
    </div>
  </div>
  <Routes>
    <Route
      element={
        <Memo(Connect(Component))
          prevPath="/default/login"
        />
      }
      path=":name"
    />
  </Routes>
</Fragment>
`;

exports[`<Login /> rendering should render PhoneInput lazily and handlers should work correctly 1`] = `
<Suspense
  fallback={
    <input
      className="form-control input"
      id="username"
      name="username"
      onChange={[Function]}
      placeholder="PHONE_PHOLD"
      type="tel"
      value=""
    />
  }
>
  <lazy
    enableSearch={false}
    excludeCountries={Array []}
    inputProps={
      Object {
        "autoComplete": "tel",
        "className": "form-control input ",
        "id": "username",
        "name": "username",
        "required": true,
      }
    }
    name="username"
    onChange={[Function]}
    onlyCountries={Array []}
    placeholder="PHONE_PHOLD"
    preferredCountries={Array []}
    value=""
  />
</Suspense>
`;

exports[`<Login /> rendering should render correctly with social links 1`] = `
<React.Fragment>
  <div
    className="container content"
    id="login"
  >
    <div
      className="inner"
    >
      <form
        className="main-column"
        onSubmit={[Function]}
      >
        <div
          className="inner"
        >
          
          <div
            className="social-links row"
          >
            <p>
              <a
                className="social-link button full"
                href="https://radius.openwisp.io/login/google"
                rel="noopener noreferrer"
              >
                <span
                  className="inner"
                >
                  <img
                    alt="Login with Google"
                    className="icon"
                    src="/assets/default/google.png"
                  />
                  <span
                    className="text"
                  >
                    Login with Google
                  </span>
                </span>
              </a>
            </p>
            <p>
              <a
                className="social-link button full"
                href="https://radius.openwisp.io/login/facebook"
                rel="noopener noreferrer"
              >
                <span
                  className="inner"
                >
                  <img
                    alt="Login with Facebook"
                    className="icon"
                    src="/assets/default/facebook.png"
                  />
                  <span
                    className="text"
                  >
                    Login with Facebook
                  </span>
                </span>
              </a>
            </p>
          </div>
          
          <div
            className="fieldset"
          >
            <div
              className="row username"
            >
              <label
                htmlFor="username"
              >
                EMAIL
              </label>
              <input
                autoComplete="username"
                className="input "
                id="username"
                name="username"
                onChange={[Function]}
                pattern=".+@.+\\\\..+"
                placeholder="USERNAME_LOG_PHOLD"
                required={true}
                title="USERNAME_LOG_TITL"
                type="email"
                value=""
              />
            </div>
            <div
              className="row password"
            >
              <label
                htmlFor="password"
              >
                PWD_LBL
              </label>
              <input
                autoComplete="current-password"
                className="input "
                id="password"
                name="password"
                onChange={[Function]}
                pattern=".{6,}"
                placeholder="PWD_PHOLD"
                required={true}
                title="PWD_PTRN_DESC"
                type="password"
                value=""
              />
              <PasswordToggleIcon
                hidePassword={true}
                inputRef={
                  Object {
                    "current": null,
                  }
                }
                isVisible={false}
                parentClassName=""
                secondInputRef={Object {}}
                toggler={[Function]}
              />
            </div>
            <div
              className="row remember-me"
            >
              <input
                checked={true}
                id="remember_me"
                name="remember_me"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="remember_me"
              >
                REMEMBER_ME
              </label>
            </div>
          </div>
          <div
            className="row add-info"
          >
            LOGIN_ADD_INFO_TXT
          </div>
          <div
            className="row login"
          >
            <input
              className="button full"
              type="submit"
              value="LOGIN"
            />
          </div>
          <div
            className="row register"
          >
            <p>
              REGISTER_BTN_LBL
            </p>
            <Link
              className="button full"
              to="/default/registration"
            >
              REGISTER_BTN_TXT
            </Link>
          </div>
          <div
            className="row links"
          >
            <Link
              className="link"
              to="/default/password/reset"
            >
              FORGOT_PASSWORD
            </Link>
          </div>
          
        </div>
      </form>
      <Memo(Connect(Contact)) />
    </div>
  </div>
  <Routes>
    <Route
      element={
        <Memo(Connect(Component))
          prevPath="/default/login"
        />
      }
      path=":name"
    />
  </Routes>
</React.Fragment>
`;

exports[`<Login /> rendering should render correctly without social links 1`] = `
<React.Fragment>
  <div
    className="container content"
    id="login"
  >
    <div
      className="inner"
    >
      <form
        className="main-column"
        onSubmit={[Function]}
      >
        <div
          className="inner"
        >
          
          <div
            className="social-links row"
          >
            <p>
              <a
                className="social-link button full"
                href="#facebook"
                rel="noopener noreferrer"
              >
                <span
                  className="inner"
                >
                  <img
                    alt="Login with Facebook"
                    className="icon"
                    src="/assets/default/facebook.svg"
                  />
                  <span
                    className="text"
                  >
                    Login with Facebook
                  </span>
                </span>
              </a>
            </p>
            <p>
              <a
                className="social-link button full"
                href="#google"
                rel="noopener noreferrer"
              >
                <span
                  className="inner"
                >
                  <img
                    alt="Login with Google"
                    className="icon"
                    src="/assets/default/google.svg"
                  />
                  <span
                    className="text"
                  >
                    Login with Google
                  </span>
                </span>
              </a>
            </p>
            <p>
              <a
                className="social-link button full"
                href="#twitter"
                rel="noopener noreferrer"
              >
                <span
                  className="inner"
                >
                  <img
                    alt="Login with X"
                    className="icon"
                    src="/assets/default/twitter.svg"
                  />
                  <span
                    className="text"
                  >
                    Login with X
                  </span>
                </span>
              </a>
            </p>
          </div>
          
          <div
            className="fieldset"
          >
            <div
              className="row username"
            >
              <label
                htmlFor="username"
              >
                EMAIL
              </label>
              <input
                autoComplete="username"
                className="input "
                id="username"
                name="username"
                onChange={[Function]}
                pattern=".+@.+\\\\..+"
                placeholder="USERNAME_LOG_PHOLD"
                required={true}
                title="USERNAME_LOG_TITL"
                type="email"
                value=""
              />
            </div>
            <div
              className="row password"
            >
              <label
                htmlFor="password"
              >
                PWD_LBL
              </label>
              <input
                autoComplete="current-password"
                className="input "
                id="password"
                name="password"
                onChange={[Function]}
                pattern=".{6,}"
                placeholder="PWD_PHOLD"
                required={true}
                title="PWD_PTRN_DESC"
                type="password"
                value=""
              />
              <PasswordToggleIcon
                hidePassword={true}
                inputRef={
                  Object {
                    "current": null,
                  }
                }
                isVisible={false}
                parentClassName=""
                secondInputRef={Object {}}
                toggler={[Function]}
              />
            </div>
            <div
              className="row remember-me"
            >
              <input
                checked={true}
                id="remember_me"
                name="remember_me"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="remember_me"
              >
                REMEMBER_ME
              </label>
            </div>
          </div>
          <div
            className="row add-info"
          >
            LOGIN_ADD_INFO_TXT
          </div>
          <div
            className="row login"
          >
            <input
              className="button full"
              type="submit"
              value="LOGIN"
            />
          </div>
          <div
            className="row register"
          >
            <p>
              REGISTER_BTN_LBL
            </p>
            <Link
              className="button full"
              to="/default/registration"
            >
              REGISTER_BTN_TXT
            </Link>
          </div>
          <div
            className="row links"
          >
            <Link
              className="link"
              to="/default/password/reset"
            >
              FORGOT_PASSWORD
            </Link>
          </div>
          
        </div>
      </form>
      <Memo(Connect(Contact)) />
    </div>
  </div>
  <Routes>
    <Route
      element={
        <Memo(Connect(Component))
          prevPath="/default/login"
        />
      }
      path=":name"
    />
  </Routes>
</React.Fragment>
`;

exports[`<Login /> rendering should render radius realms form if radius_realms is true 1`] = `
<form
  action="https://radius-proxy/login/"
  className="hidden"
  id="cp-login-form"
  method="POST"
>
  <input
    name="username"
    type="hidden"
    value=""
  />
  <input
    name="password"
    type="hidden"
    value=""
  />
  0
</form>
`;

exports[`<Login /> rendering with placeholder translation tags should render translation placeholder correctly 1`] = `
<React.Fragment>
  <div
    className="container content"
    id="login"
  >
    <div
      className="inner"
    >
      <form
        className="main-column"
        onSubmit={[Function]}
      >
        <div
          className="inner"
        >
          
          <div
            className="social-links row"
          >
            <p>
              <a
                className="social-link button full"
                href="#facebook"
                rel="noopener noreferrer"
              >
                <span
                  className="inner"
                >
                  <img
                    alt="Login with Facebook"
                    className="icon"
                    src="/assets/default/facebook.svg"
                  />
                  <span
                    className="text"
                  >
                    Login with Facebook
                  </span>
                </span>
              </a>
            </p>
            <p>
              <a
                className="social-link button full"
                href="#google"
                rel="noopener noreferrer"
              >
                <span
                  className="inner"
                >
                  <img
                    alt="Login with Google"
                    className="icon"
                    src="/assets/default/google.svg"
                  />
                  <span
                    className="text"
                  >
                    Login with Google
                  </span>
                </span>
              </a>
            </p>
            <p>
              <a
                className="social-link button full"
                href="#twitter"
                rel="noopener noreferrer"
              >
                <span
                  className="inner"
                >
                  <img
                    alt="Login with X"
                    className="icon"
                    src="/assets/default/twitter.svg"
                  />
                  <span
                    className="text"
                  >
                    Login with X
                  </span>
                </span>
              </a>
            </p>
          </div>
          
          <div
            className="fieldset"
          >
            <div
              className="row username"
            >
              <label
                htmlFor="username"
              >
                EMAIL
              </label>
              <input
                autoComplete="username"
                className="input "
                id="username"
                name="username"
                onChange={[Function]}
                pattern=".+@.+\\\\..+"
                placeholder="USERNAME_LOG_PHOLD"
                required={true}
                title="USERNAME_LOG_TITL"
                type="email"
                value=""
              />
            </div>
            <div
              className="row password"
            >
              <label
                htmlFor="password"
              >
                PWD_LBL
              </label>
              <input
                autoComplete="current-password"
                className="input "
                id="password"
                name="password"
                onChange={[Function]}
                pattern=".{6,}"
                placeholder="PWD_PHOLD"
                required={true}
                title="PWD_PTRN_DESC"
                type="password"
                value=""
              />
              <PasswordToggleIcon
                hidePassword={true}
                inputRef={
                  Object {
                    "current": null,
                  }
                }
                isVisible={false}
                parentClassName=""
                secondInputRef={Object {}}
                toggler={[Function]}
              />
            </div>
            <div
              className="row remember-me"
            >
              <input
                checked={true}
                id="remember_me"
                name="remember_me"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="remember_me"
              >
                REMEMBER_ME
              </label>
            </div>
          </div>
          <div
            className="row add-info"
          >
            LOGIN_ADD_INFO_TXT
          </div>
          <div
            className="row login"
          >
            <input
              className="button full"
              type="submit"
              value="LOGIN"
            />
          </div>
          <div
            className="row register"
          >
            <p>
              REGISTER_BTN_LBL
            </p>
            <Link
              className="button full"
              to="/default/registration"
            >
              REGISTER_BTN_TXT
            </Link>
          </div>
          <div
            className="row links"
          >
            <Link
              className="link"
              to="/default/password/reset"
            >
              FORGOT_PASSWORD
            </Link>
          </div>
          
        </div>
      </form>
      <Memo(Connect(Contact)) />
    </div>
  </div>
  <Routes>
    <Route
      element={
        <Memo(Connect(Component))
          prevPath="/default/login"
        />
      }
      path=":name"
    />
  </Routes>
</React.Fragment>
`;
